--- a/Examples/GOL/src/main/java/il/ac/bgu/cs/bp/bpjs/context/examples/gol/gui/GameView.form
+++ b/Examples/GOL/src/main/java/il/ac/bgu/cs/bp/bpjs/context/examples/gol/gui/GameView.form
@@ -8,25 +8,59 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="83b45" class="javax.swing.JLabel" binding="generation">
+      <grid id="f26db" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="50" left="50" bottom="50" right="50"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="Generation - "/>
-        </properties>
-      </component>
-      <component id="51627" class="javax.swing.JTable" binding="table">
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="9cfdb" class="javax.swing.JTable" binding="table">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <autoResizeMode value="0"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="76498" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <autoResizeMode value="4"/>
-          <fillsViewportHeight value="false"/>
-        </properties>
-      </component>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="8e0ef" class="javax.swing.JLabel" binding="pattern">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="1" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font size="12"/>
+              <text value="Label"/>
+              <verticalTextPosition value="3"/>
+            </properties>
+          </component>
+          <component id="736b9" class="javax.swing.JLabel" binding="generation">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="50"/>
+                <preferred-size width="-1" height="50"/>
+                <maximum-size width="-1" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <enabled value="false"/>
+              <font size="10"/>
+              <text value="Label"/>
+              <verticalTextPosition value="3"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
