Starting to add mating dance.

--- a/Examples/GOL/src/main/java/il/ac/bgu/cs/bp/bpjs/context/examples/gol/gui/GameView.form
+++ b/Examples/GOL/src/main/java/il/ac/bgu/cs/bp/bpjs/context/examples/gol/gui/GameView.form
@@ -55,7 +55,7 @@
             <properties>
               <enabled value="false"/>
               <font size="10"/>
-              <text value="Label"/>
+              <text value="Generation - 0"/>
               <verticalTextPosition value="3"/>
             </properties>
           </component>
